Currently Working as Intended - Working on Users

--- a/MLT/MLT.csproj
+++ b/MLT/MLT.csproj
@@ -6,6 +6,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Data\Migrations\20220109233350_ModifyLengthFlightPathFields.backup" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="Data\Migrations\20220109233350_ModifyLengthFlightPathFields.backup" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="wwwroot\img\MLTTravel.jpg" />
   </ItemGroup>
 
@@ -19,6 +27,27 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Areas\Admin\Data\" />
+    <Folder Include="Areas\StaffMember\Data\" />
+    <Folder Include="Areas\StaffMember\Models\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="Areas\StaffMember\Views\Shared\_Layout.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Update="Areas\StaffMember\Views\_ViewImports.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+    <Content Update="Areas\StaffMember\Views\_ViewStart.cshtml">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
